# rust-oom

./: CHANGELOG.md  COPYRIGHT  Cargo.toml  HOW-TO-RELEASE.md  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
oom/: all.html  index.html  sidebar-items.js  struct.NonEmptyMutSlice.html  struct.NonEmptySlice.html  struct.NonEmptyVec.html
oom/slice/share/: struct.NonEmptySlice.html
oom/slice/unique/: struct.NonEmptyMutSlice.html
oom/vec/: struct.NonEmptyVec.html
src/: doctests.rs  lib.rs  slice.rs  vec.rs
src/oom/: lib.rs.html  slice.rs.html  vec.rs.html
src/oom/slice/: share.rs.html  unique.rs.html
src/slice/: share.rs  unique.rs
tests/: non_empty.rs  tests.rs
tests/compile-fail/boundless-lifetimes/: mut.rs  mut.stderr  mut2.rs  mut2.stderr  vec.rs  vec.stderr
