[package]
name = "oom"
version = "0.1.0" # Also update `html_root_url` in lib.rs
authors = ["Lzu Tao <taolzu@gmail.com>"]
categories = ["no-std", "parser-implementations", "parsing"]
documentation = "https://docs.rs/oom/*/x86_64-unknown-linux-gnu/oom/"
edition = "2018"
exclude = [
    "/.github",
    "/HOW-TO-RELEASE.md",
    "/todo.md",
]
keywords = ["nonempty", "non-empty"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lzutao/rust-oom"
description = "One or Many types (Haskell NonEmpty)"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["slice"]
std = ["vec"]
slice = []
vec = [ "slice" ]

# iter = []
# array = []
## cannot generic over tuple length
# tuple = []

[dependencies]

[dev-dependencies]
